# rules_capnproto

./: .clang-format  CHANGELOG.md  README.md
.github/workflows/: ci.yml
capnp/: capnp_info.bzl  capnp_library.bzl  cc_capnp_library.bzl  repositories.bzl
capnp/internal/: BUILD.capnp.bazel  BUILD.lang_toolchain.tpl  BUILD.toolchain.tpl  capnp_lang_toolchain.bzl  capnp_lang_toolchain_gen.bzl  capnp_tool_action.bzl  capnp_toolchain.bzl  capnp_toolchain_gen.bzl  cc_defs.bzl  label_utils.bzl  string_utils.bzl
capnp/toolchain_defs/: cc_defs.bzl  toolchain_defs.bzl
examples/cc_example/: .bazelrc  WORKSPACE.bazel  bazel-bin  bazel-cc_example  bazel-out  bazel-testlogs
examples/cc_example/cc_example/: BUILD.bazel  main.cc
examples/cc_example/cc_example/capnp/: BUILD.bazel  address_book.capnp  person.capnp
